# iof-rotary-encoder

./: Cargo.toml
.cargo/: config.toml
examples/: hello-encoder.rs
