[package]
name = "iof-rotary-encoder"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-hal = "0.41.2"
esp-idf-sys = { version = "0.33", features = ["binstart", "native"] }
anyhow = "1"
rotary-encoder-embedded = "0.2.0"
heapless = "0.7.16"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
